Various root page fixes. Selected element is now fully highlighted as for hover, workbench icon no longer jumps, fix 1 pixel misalignment in hover text in rtl mode.

--- a/org.eclipse.ui.intro.universal/themes/circles/html/font-relative.css
+++ b/org.eclipse.ui.intro.universal/themes/circles/html/font-relative.css
@@ -77,8 +77,14 @@ p .group-description {
 	font-size:90%; 
 }
 
-/* Link label prorties */
+/* Link label properties */
 #root #page-links a .link-label {
+	font-size : 110%;
+}
+
+#root #page-links a:active .link-label,
+#root #page-links a:focus .link-label,
+#root #page-links a:hover .link-label {
 	font-size : 12.5pt;
 }
 
